@@ -1267,11 +1267,11 @@
 </td>
 <td class=cellinside><br /> Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.<br />
 </td>
-<td class=cellinside>0.4.3
+<td class=cellinside>0.4.4
 </td>
-<td class=cellinside>2015-07-01
+<td class=cellinside>2015-07-19
 </td>
-<td class=cellinside>17:04:54
+<td class=cellinside>17:57:00
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
