@@ -1,5 +1,5 @@
 % latex table generated in R 3.3.0 by xtable 1.7-4 package
-% Sun Jul 19 15:02:09 2015
+% Sun Jul 19 17:59:31 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -124,7 +124,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Margret C. Fuchs, TU Bergakademie Freiberg (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   64 & readSPE2R & Import Princeton Intruments (TM) SPE-file into R & $<$br /$>$ Function imports Princeton Instruments (TM) SPE-files into R environment and$<$br /$>$ provides  RLum  objects as output.$<$br /$>$ & 0.1 & 2015-07-01 & 16:32:11
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  65 & readXSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.4.3 & 2015-07-01 & 17:04:54
+  65 & readXSYG2R & Import XSYG files to R & $<$br /$>$ Imports XSYG files produced by a Freiberg Instrument lexsyg reader into R.$<$br /$>$ & 0.4.4 & 2015-07-19 & 17:57:00
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   66 & Risoe.BINfileData-class & Class  "Risoe.BINfileData" & $<$br /$>$ S4 class object for luminescence data in R. The object is produced as output$<$br /$>$ of the function  readBIN2R .$<$br /$>$ &  &  &  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$ \\ 
   67 & Risoe.BINfileData2RLum.Analysis & Convert Risoe.BINfileData object to an RLum.Analysis object & $<$br /$>$ Converts values from one specific position of a Risoe.BINfileData S4-class$<$br /$>$ object to an RLum.Analysis object.$<$br /$>$ & 0.1.2 & 2015-06-16 & 15:23:12
