@@ -94,7 +94,7 @@ be done using the functions provided with the package \code{\link{xml}}.\cr
 the XSXG file are skipped.
 }
 \section{Function version}{
- 0.4.3 (2015-07-01 17:04:54)
+ 0.4.4 (2015-07-19 17:57:00)
 }
 \examples{
 ##(1) import XSYG file to R (uncomment for usage)
@@ -128,6 +128,7 @@ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne
 \references{
 Grehl, S., Kreutzer, S., Hoehne, M., 2013. Documentation of the
 XSYG file format. Unpublished Technical Note. Freiberg, Germany \cr\cr
+
 \bold{Further reading} \cr\cr XML: \url{http://en.wikipedia.org/wiki/XML}
 }
 \seealso{
